# tr_level_viewer

./: .gitignore  CMakeLists.txt  README
code/: camera.cpp  camera.h  main.cpp  renderer.cpp  renderer.h  shaders.cpp  shaders.h  tr_loader.cpp  tr_loader.h  tr_types.cpp  tr_types.h
shaders/: mesh.frag  mesh_constant.vert  mesh_external.vert  mesh_internal.vert  mesh_room.vert  sprite.frag  sprite.vert
